<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--if the screen is small and cannot display all views together, you can scroll-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/padding_top"
        android:paddingBottom="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:paddingStart="@dimen/padding"
        android:background="@color/white">

        <!--linear layout is used because all views are arranged vertically, one view at each row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="370dp"
                android:layout_height="309dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/shoestore_art" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textSize="@dimen/title_size" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/app_description"
                android:textAlignment="center"
                android:textSize="@dimen/paragraph_size" />

            <Button
                android:id="@+id/next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/next"
                style="@style/button_style"/>

        </LinearLayout>
    </ScrollView>
</layout>